force-app/main/default/objects/Payment_Link__c/Payment_Link__c.object-meta.xml
<CustomObject>
    <label>Payment Link</label>
    <nameField>
        <displayFormat>PL-{00000}</displayFormat>
        <label>Payment Link Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>