force-app/main/default/objects/Payment_Link__c/fields/Concept__c.field-meta.xml
<CustomField>
    <fullName>Concept__c</fullName>
    <label>Concept</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>