force-app/main/default/objects/Payment_Link__c/fields/Metadata_Index__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Index__c</fullName>
    <label>Metadata Index</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>