force-app/main/default/objects/Payment_Link__c/fields/Metadata_JSON__c.field-meta.xml
<CustomField>
    <fullName>Metadata_JSON__c</fullName>
    <label>Metadata JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>