force-app/main/default/objects/Payment_Link__c/fields/Payment_URL__c.field-meta.xml
<CustomField>
    <fullName>Payment_URL__c</fullName>
    <label>Payment URL</label>
    <type>Url</type>
</CustomField>