force-app/main/default/objects/Payment_Link__c/fields/Provider_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Provider_Transaction_ID__c</fullName>
    <label>Provider Transaction ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>