force-app/main/default/objects/Payment_Link__c/fields/Raw_Request__c.field-meta.xml
<CustomField>
    <fullName>Raw_Request__c</fullName>
    <label>Raw Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>