force-app/main/default/objects/Payment_Link__c/fields/Raw_Response__c.field-meta.xml
<CustomField>
    <fullName>Raw_Response__c</fullName>
    <label>Raw Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>