force-app/main/default/objects/Payment_Link__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <externalId>true</externalId>
    <label>Reference</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>