force-app/main/default/objects/Payment_Link__c/validationRules/Amount_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Prevents saving a payment link when amount is zero or negative.</description>
    <errorConditionFormula>Amount__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>El monto tiene que ser mayor a 0</errorMessage>
</ValidationRule>