force-app/main/default/objects/Payment_Link__c/validationRules/BloquearCampos_EstadoFinal.validationRule-meta.xml
<ValidationRule>
    <fullName>BloquearCampos_EstadoFinal</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  ISPICKVAL(Status__c, &quot;Approved&quot;),
  ISPICKVAL(Status__c, &quot;Rejected&quot;),
  ISPICKVAL(Status__c, &quot;Expired&quot;)
)
&amp;&amp;
OR(
  ISCHANGED(Amount__c),
  ISCHANGED(Reference__c)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>El estado final no puede cambiar</errorMessage>
</ValidationRule>