force-app/main/default/objects/Payment_Link__c/validationRules/Reference_Is_Not_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Reference_Is_Not_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Reference__c)</errorConditionFormula>
    <errorDisplayField>Reference__c</errorDisplayField>
    <errorMessage>La referencia no puede estar vacia</errorMessage>
</ValidationRule>